Fixed tactic and metrics drop down overlaping with the widgets on the Campaign Details page

--- a/app/assets/stylesheets/campaign_details.less
+++ b/app/assets/stylesheets/campaign_details.less
@@ -158,6 +158,8 @@ body {
     box-shadow: 0px 1px 1px #ebf0f5;
     -moz-box-shadow: 0px 1px 1px #ebf0f5;
     -webkit-box-shadow: 0px 1px 1px #ebf0f5;
+    position: relative;
+    z-index: 20 ;
     .error_message {
       position: absolute;
       color: #fff ;
@@ -365,6 +367,7 @@ body {
           width: auto ;
           max-height:  600px ;
           z-index: 8;
+          max-width: 500px;
           .btn-link {
             padding: 0px ;
             color: #262626 ;
